Reduce overdraw of gallery item ImageViews

--- a/app/src/main/res/layout/single_item_photo.xml
+++ b/app/src/main/res/layout/single_item_photo.xml
@@ -9,7 +9,6 @@
         android:id="@+id/photoItem"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:background="@android:color/darker_gray"/>
+        android:scaleType="centerCrop" />
 
 </co.rahulchowdhury.memories.ui.widget.SquareFrameLayout>
