--- a/app/src/main/res/layout/single_item_photo.xml
+++ b/app/src/main/res/layout/single_item_photo.xml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<co.rahulchowdhury.memories.ui.widget.SquareFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<co.rahulchowdhury.memories.ui.widget.SquareImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/photoItem"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="2dp">
-
-    <ImageView
-        android:id="@+id/photoItem"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop" />
-
-</co.rahulchowdhury.memories.ui.widget.SquareFrameLayout>
+    android:padding="2dp"
+    android:scaleType="centerCrop" />
