Add tests for PhotosBoundaryCallback

--- a/app/src/main/res/layout/single_item_photo.xml
+++ b/app/src/main/res/layout/single_item_photo.xml
@@ -4,4 +4,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="2dp"
-    android:scaleType="centerCrop" />
+    android:scaleType="centerCrop"
+    android:src="@android:color/darker_gray" />
